more padding, alignment fixes (bot store, send, etc.)

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1739,6 +1739,7 @@ a.suggest-command {
     display: block;
     padding-top: .8rem;
     padding-bottom: .8rem;
+    margin-bottom: 2em;
 }
 
 .message-log {
